--- a/nginx-prod.conf
+++ b/nginx-prod.conf
@@ -3,6 +3,46 @@ events {
 }
 
 http {
+    # Performa        # API health check - proxy to backend
+        location /api/        # Frontend static files (served directly from built files)
+        location / {
+            proxy_pass http://frontend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;{
+            proxy_pass http://backend/health;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # Add CORS headers for health check
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+        }ions
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+    client_max_body_size 100M;
+    
+    # Gzip compression
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 10240;
+    gzip_proxied expired no-cache no-store private must-revalidate auth;
+    gzip_types
+        text/plain
+        text/css
+        text/xml
+        text/javascript
+        application/javascript
+        application/xml+rss
+        application/json;
+    
     # Logging configuration
     log_format detailed '$remote_addr - $remote_user [$time_local] "$request" '
                        '$status $body_bytes_sent "$http_referer" '
@@ -12,11 +52,13 @@ http {
     error_log /var/log/nginx/error.log debug;
 
     upstream backend {
-        server backend:8000;
+        server backend:8000 max_fails=3 fail_timeout=30s;
+        keepalive 32;
     }
 
     upstream frontend {
-        server frontend:3000;
+        server frontend:3000 max_fails=3 fail_timeout=30s;
+        keepalive 32;
     }
 
     # Main server configuration
@@ -42,7 +84,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_Set_header X-Forwarded-Proto $scheme;
             
             # Add CORS headers for health check
             add_header 'Access-Control-Allow-Origin' '*' always;
@@ -75,6 +117,14 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_redirect off;
             
+            # Performance optimizations
+            proxy_buffering on;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            
             # Add CORS headers for all responses
             add_header 'Access-Control-Allow-Origin' '*' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
@@ -90,16 +140,28 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_Set_header X-Forwarded-Proto $scheme;
             
-            # Timeout settings
-            proxy_connect_timeout 10s;
-            proxy_send_timeout 10s;
-            proxy_read_timeout 10s;
+            # Performance optimizations
+            proxy_buffering on;
+            proxy_buffer_size 128k;
+            proxy_buffers 4 256k;
+            proxy_busy_buffers_size 256k;
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            
+            # Cache static assets
+            location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+                proxy_pass http://frontend;
+                expires 1y;
+                add_header Cache-Control "public, immutable";
+                add_header X-Cache-Status "STATIC";
+            }
             
             # Error handling
-            proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
+            proxy_next_upstream error invalid_header http_500 http_502 http_503 http_504;
         }
     }
 }
+
 
