feat: add debounce utility and update API, backend, and Nginx config
- Added  utility in frontend/src/utils for optimized event handling
- Updated API service in
- Modified backend  for improved logic/bug fixes
- Updated  for production configuration adjustments

--- a/nginx-prod.conf
+++ b/nginx-prod.conf
@@ -3,13 +3,23 @@ events {
 }
 
 http {
-    # Logging configuration
+    # Rate limiting zones
+    limit_req_zone $binary_remote_addr zone=api_limit:10m rate=30r/m;
+    limit_req_zone $binary_remote_addr zone=general_limit:10m rate=100r/m;
+    
+    # Optimized logging configuration
+    log_format minimal '$remote_addr - [$time_local] "$request" $status $body_bytes_sent';
     log_format detailed '$remote_addr - $remote_user [$time_local] "$request" '
                        '$status $body_bytes_sent "$http_referer" '
                        '"$http_user_agent" "$http_origin"';
     
-    access_log /var/log/nginx/access.log detailed;
-    error_log /var/log/nginx/error.log debug;
+    access_log /var/log/nginx/access.log minimal;
+    error_log /var/log/nginx/error.log error;  # Only show errors, not info
+
+    # Connection management
+    keepalive_timeout 65;
+    keepalive_requests 100;
+    client_max_body_size 16M;
 
     upstream backend {
         server backend:8000;
@@ -23,6 +33,9 @@ http {
     server {
         listen 80;
         server_name _ manikandan.info *.ap-south-1.elb.amazonaws.com *.elb.amazonaws.com;
+
+        # Rate limiting for general requests
+        limit_req zone=general_limit burst=20 nodelay;
 
         # Security headers
         add_header X-Frame-Options DENY;
@@ -57,6 +70,9 @@ http {
         }
         
         location /api/ {
+            # Rate limiting for API requests
+            limit_req zone=api_limit burst=10 nodelay;
+            
             # Handle preflight requests
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' '*';
